# data-dictionary

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.test  Dockerfile.test.unit  README.md  docker-compose.postgres.yaml  docker-compose.yaml  pubsub-load.sh  run-local.sh  test.sh
migrations/: V1__create_database_and_init_tables.sql
src/: bucket.rs  dict.rs  error.rs  gcp_client.rs  lib.rs  pubsub.rs  pubsub_rt.rs  service.rs  util.rs
src/api/: http.rs
src/db/: db.rs  mod.rs  range_query.rs  sql.rs
tests/: db_test.rs  testutil.rs  util.rs
tests/json/: dd.json
tests/sql/: drop_all.sql
webui/: package-lock.json  package.json
webui/public/: index.html
webui/src/: App.svelte  DatasetResultTable.svelte  DatasetView.svelte  DatasetsTableView.svelte  Layout.svelte  LoginForm.svelte  RegisterDatasetView.svelte  Usage.svelte  main.js
